--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,10 @@ form{
 }
 
 @media screen and (max-width: 575px) {
+  .searchGif {
+    font-size: 18px;
+  }
+
   .card-grid {
     flex-direction: column;
   }
